[package]
name = "voxelengine"
version = "0.1.0"
authors = ["Brandon Atkinson <bj.atkinson92@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.27"
wasm-bindgen = "0.2.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlBuffer',
  'WebGlShader',
  'Window',
]